--- a/index.html
+++ b/index.html
@@ -1,38 +1,127 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Entrada de Estoque</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dashboard Estoque</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background-color: #f8f9fa;
+    }
+    .card {
+      margin-bottom: 20px;
+    }
+    table {
+      background-color: #fff;
+    }
+    thead th {
+      background-color: #343a40;
+      color: #fff;
+    }
+  </style>
 </head>
-<body class="bg-gray-100 p-6">
+<body>
+  <div class="container-fluid p-4">
+    <h1 class="mb-4">Dashboard de Estoque</h1>
 
-  <h1 class="text-2xl font-bold text-blue-600 mb-6">Entrada de Estoque</h1>
-
-  <form action="/entrada" method="post" class="bg-white p-6 rounded-xl shadow w-full max-w-lg">
-
-    <div class="mb-4">
-      <label class="block text-gray-700 font-semibold">Selecione o Material</label>
-      <select name="nome" required
-              class="w-full border rounded px-3 py-2 mt-1 focus:ring focus:ring-blue-300">
-        {% for mat in materiais %}
-          <option value="{{ mat.name }}">{{ mat.name }} ({{ mat.sku }})</option>
-        {% endfor %}
-      </select>
+    <!-- Cards de Resumo -->
+    <div class="row mb-4">
+      <div class="col-md-3">
+        <div class="card text-white bg-primary">
+          <div class="card-body">
+            <h5 class="card-title">Total de Materiais</h5>
+            <p class="card-text" id="totalMateriais">0</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card text-white bg-warning">
+          <div class="card-body">
+            <h5 class="card-title">Estoque Baixo</h5>
+            <p class="card-text" id="estoqueBaixo">0</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card text-white bg-success">
+          <div class="card-body">
+            <h5 class="card-title">Entradas Recentes</h5>
+            <p class="card-text" id="entradasRecentes">0</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card text-white bg-info">
+          <div class="card-body">
+            <h5 class="card-title">Saídas Recentes</h5>
+            <p class="card-text" id="saidasRecentes">0</p>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div class="mb-6">
-      <label class="block text-gray-700 font-semibold">Quantidade</label>
-      <input type="number" name="quantidade" required min="1"
-             class="w-full border rounded px-3 py-2 mt-1 focus:ring focus:ring-blue-300">
+    <!-- Tabela de Materiais -->
+    <div class="card">
+      <div class="card-header bg-dark text-white">
+        Saldo Atual de Materiais
+      </div>
+      <div class="card-body">
+        <div class="table-responsive">
+          <table class="table table-bordered table-hover" id="tabelaMateriais">
+            <thead>
+              <tr>
+                <th>SKU</th>
+                <th>Nome do Material</th>
+                <th>Quantidade</th>
+                <th>Unidade</th>
+                <th>Última Atualização</th>
+              </tr>
+            </thead>
+            <tbody>
+              <!-- Os dados serão inseridos aqui dinamicamente -->
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
+  </div>
 
-    <button type="submit"
-            class="w-full bg-blue-600 text-white font-bold py-2 px-4 rounded hover:bg-blue-700">
-      Registrar Entrada
-    </button>
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    // Exemplo de dados (substitua pelo seu backend/API)
+    const materiais = [
+      { sku: "MAT001", nome: "Parafuso M6", quantidade: 1200, unidade: "pcs", ultimaAtualizacao: "2025-09-28 14:00" },
+      { sku: "MAT002", nome: "Porca M6", quantidade: 800, unidade: "pcs", ultimaAtualizacao: "2025-09-28 13:30" },
+      { sku: "MAT003", nome: "Arruela M6", quantidade: 50, unidade: "pcs", ultimaAtualizacao: "2025-09-28 12:00" }
+    ];
 
-  </form>
+    function atualizarDashboard() {
+      // Atualiza cards
+      document.getElementById("totalMateriais").innerText = materiais.length;
+      document.getElementById("estoqueBaixo").innerText = materiais.filter(m => m.quantidade < 100).length;
+      document.getElementById("entradasRecentes").innerText = 5; // Placeholder
+      document.getElementById("saidasRecentes").innerText = 3; // Placeholder
 
+      // Atualiza tabela
+      const tbody = document.querySelector("#tabelaMateriais tbody");
+      tbody.innerHTML = "";
+      materiais.forEach(mat => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td>${mat.sku}</td>
+          <td>${mat.nome}</td>
+          <td>${mat.quantidade}</td>
+          <td>${mat.unidade}</td>
+          <td>${mat.ultimaAtualizacao}</td>
+        `;
+        tbody.appendChild(tr);
+      });
+    }
+
+    // Inicializa dashboard
+    atualizarDashboard();
+  </script>
 </body>
 </html>
