--- a/index.html
+++ b/index.html
@@ -25,6 +25,34 @@
   <div class="container-fluid p-4">
     <h1 class="mb-4">Dashboard de Estoque</h1>
 
+    <!-- Painel de Entrada de Materiais -->
+    <div class="card mb-4">
+      <div class="card-header bg-secondary text-white">
+        Entrada de Material no Estoque
+      </div>
+      <div class="card-body">
+        <form id="formEntrada">
+          <div class="row gy-2">
+            <div class="col-md-2">
+              <input type="text" class="form-control" name="sku" placeholder="SKU" required>
+            </div>
+            <div class="col-md-3">
+              <input type="text" class="form-control" name="nome" placeholder="Nome do Material" required>
+            </div>
+            <div class="col-md-2">
+              <input type="number" class="form-control" name="quantidade" placeholder="Quantidade" required min="1">
+            </div>
+            <div class="col-md-2">
+              <input type="text" class="form-control" name="unidade" placeholder="Unidade" required>
+            </div>
+            <div class="col-md-3">
+              <button type="submit" class="btn btn-success w-100">Registrar Entrada</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+
     <!-- Cards de Resumo -->
     <div class="row mb-4">
       <div class="col-md-3">
@@ -90,38 +118,60 @@
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    // Exemplo de dados (substitua pelo seu backend/API)
-    const materiais = [
-      { sku: "MAT001", nome: "Parafuso M6", quantidade: 1200, unidade: "pcs", ultimaAtualizacao: "2025-09-28 14:00" },
-      { sku: "MAT002", nome: "Porca M6", quantidade: 800, unidade: "pcs", ultimaAtualizacao: "2025-09-28 13:30" },
-      { sku: "MAT003", nome: "Arruela M6", quantidade: 50, unidade: "pcs", ultimaAtualizacao: "2025-09-28 12:00" }
-    ];
+    async function atualizarDashboard() {
+      try {
+        const response = await fetch("/materiais");
+        if (!response.ok) throw new Error("Erro ao buscar materiais");
+        const materiais = await response.json();
 
-    function atualizarDashboard() {
-      // Atualiza cards
-      document.getElementById("totalMateriais").innerText = materiais.length;
-      document.getElementById("estoqueBaixo").innerText = materiais.filter(m => m.quantidade < 100).length;
-      document.getElementById("entradasRecentes").innerText = 5; // Placeholder
-      document.getElementById("saidasRecentes").innerText = 3; // Placeholder
+        // Atualiza cards
+        document.getElementById("totalMateriais").innerText = materiais.length;
+        document.getElementById("estoqueBaixo").innerText = materiais.filter(m => m.quantidade < 100).length;
+        document.getElementById("entradasRecentes").innerText = materiais.filter(m => m.tipo === "entrada").length;
+        document.getElementById("saidasRecentes").innerText = materiais.filter(m => m.tipo === "saida").length;
 
-      // Atualiza tabela
-      const tbody = document.querySelector("#tabelaMateriais tbody");
-      tbody.innerHTML = "";
-      materiais.forEach(mat => {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td>${mat.sku}</td>
-          <td>${mat.nome}</td>
-          <td>${mat.quantidade}</td>
-          <td>${mat.unidade}</td>
-          <td>${mat.ultimaAtualizacao}</td>
-        `;
-        tbody.appendChild(tr);
-      });
+        // Atualiza tabela
+        const tbody = document.querySelector("#tabelaMateriais tbody");
+        tbody.innerHTML = "";
+        materiais.forEach(mat => {
+          const tr = document.createElement("tr");
+          tr.innerHTML = `
+            <td>${mat.sku}</td>
+            <td>${mat.nome}</td>
+            <td>${mat.quantidade}</td>
+            <td>${mat.unidade}</td>
+            <td>${mat.ultimaAtualizacao}</td>
+          `;
+          tbody.appendChild(tr);
+        });
+      } catch (err) {
+        console.error(err);
+        alert("Não foi possível carregar os dados do estoque.");
+      }
     }
 
-    // Inicializa dashboard
-    atualizarDashboard();
+    // Formulário de entrada
+    document.getElementById("formEntrada").addEventListener("submit", async function(e){
+      e.preventDefault();
+      const data = Object.fromEntries(new FormData(this));
+      data.tipo = "entrada"; // Marcar como entrada
+
+      const response = await fetch("/materiais", {
+        method: "POST",
+        headers: {"Content-Type": "application/json"},
+        body: JSON.stringify(data)
+      });
+
+      if (response.ok) {
+        alert("Entrada registrada com sucesso!");
+        atualizarDashboard(); // Atualiza os dados
+        this.reset();
+      } else {
+        alert("Erro ao registrar entrada.");
+      }
+    });
+
+    document.addEventListener("DOMContentLoaded", atualizarDashboard);
   </script>
 </body>
 </html>
